fix logo on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,9 @@
     src: url(../assets/Kanit-Regular.ttf);
 }
 
+ul.logo {
+	list-style: none;
+}
 
 	/* Single Post */
 div.sharedaddy.sd-sharing-enabled, div#jp-relatedposts.jp-relatedposts {
